--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "implicit-arrow-linebreak": "off"
+      "implicit-arrow-linebreak": "off",
+      "import/prefer-default-export": "off"
     },
     "overrides": [
       {
