--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "rules": {
       "implicit-arrow-linebreak": "off",
       "import/prefer-default-export": "off",
-      "object-curly-newline": "off"
+      "object-curly-newline": "off",
+      "no-shadow": "off"
     },
     "overrides": [
       {
